refactor(accordion): remove style height and add hidden class in sequence with animation

--- a/src/components/Accordion/sgds-accordion-item.scss
+++ b/src/components/Accordion/sgds-accordion-item.scss
@@ -9,7 +9,7 @@
 .accordion-body {
   padding: 0;
   line-height: var(--accordion-item-line-height);
-  // overflow: hidden;
+  overflow: hidden;
 }
 
 .accordion-content {
