--- a/src/components/Masthead/masthead.css
+++ b/src/components/Masthead/masthead.css
@@ -91,22 +91,16 @@
   /**scss */
 
   :host {
-    --sgds-masthead-font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial, "Noto Sans", "Liberation Sans",
-      sans-serif;
-    --sgds-masthead-text-color: hsl(0, 0%, 28%);
-    --sgds-masthead-link-color: hsl(222, 63%, 50%);
-    --sgds-masthead-link-color-hover: hsl(221, 64%, 55%);
     --sgds-masthead-mobile-font-size: 0.6875rem;
     --sgds-masthead-mobile-padding-x: 0.75rem;
     --sgds-masthead-fluid-padding-x: 0.75rem;
-    --sgds-masthead-crest-color: rgb(239, 51, 32);
   }
 
   .sgds-masthead {
     font-size: 0.875rem;
     background-color: hsl(0, 0%, 94%);
-    font-family: var(--sgds-masthead-font-family);
-    color: var(--sgds-masthead-text-color);
+    font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial, "Noto Sans", "Liberation Sans", sans-serif;
+    color: hsl(0, 0%, 28%);
     @media screen and (max-width: 1023px) {
       font-size: var(--sgds-masthead-mobile-font-size);
       .col,
@@ -125,7 +119,7 @@
     width: 1.25rem;
     height: 1.75rem;
     path {
-      fill: var(--sgds-masthead-crest-color);
+      fill: rgb(239, 51, 32);
     }
   }
 
@@ -150,15 +144,19 @@
 
   .sgds-masthead-button {
     display: flex;
-    color: var(--sgds-masthead-link-color);
+    color: hsl(222, 63%, 50%);
     align-items: center;
     cursor: pointer;
     &-text {
       text-decoration: underline;
       &:hover {
-        color: var(--sgds-masthead-link-color-hover);
+        color: hsl(221, 64%, 55%);
       }
     }
+  }
+
+  .sgds-masthead-button-text {
+    text-decoration: underline;
   }
 
   .sgds-masthead-content {
@@ -213,7 +211,7 @@
       .banner-icon {
         width: 1.125rem;
         path {
-          fill: var(--sgds-masthead-text-color);
+          fill: hsl(0, 0%, 28%);
         }
 
         @media screen and (max-width: 1023px) {
@@ -228,7 +226,7 @@
       }
       .banner-icon-inline {
         path {
-          fill: var(--sgds-masthead-text-color);
+          fill: hsl(0, 0%, 28%);
         }
         @media screen and (max-width: 1023px) {
           width: 0.6rem;
@@ -253,16 +251,16 @@
   a.trusted-websites-link {
     display: inline-flex;
     align-items: center;
-    color: var(--sgds-masthead-link-color);
+    color: hsl(222, 63%, 50%);
     margin-left: 0.125rem;
     svg {
       margin-left: 0.125rem;
-      fill: var(--sgds-masthead-link-color);
+      fill: hsl(222, 63%, 50%);
     }
     &:hover {
-      color: var(--sgds-masthead-link-color-hover);
+      color: hsl(221, 64%, 55%);
       svg {
-        fill: var(--sgds-masthead-link-color-hover);
+        fill: hsl(221, 64%, 55%);
       }
     }
   }
