--- a/src/components/Accordion/sgds-accordion-item.scss
+++ b/src/components/Accordion/sgds-accordion-item.scss
@@ -22,11 +22,26 @@
   &:not(.collapsed){
     color: var(--accordion-active-color);
   }
+  svg.bi-chevron-down {
+    margin-left: auto;
+    transition: transform 0.2s ease-in-out;
+    width: 1.3rem;
+    height: 1.3rem;
+  }
 }
 
 .accordion-button:not(.collapsed) {
   font-weight: var(--accordion-item-font-weight);
   box-shadow: none;
+  svg.bi-chevron-down {
+    transform: rotate(-180deg);
+  }
+}
+
+// Temporarily remove background-image for v1. 
+// Proper fix at v2  
+.accordion-button::after {
+  content:unset;
 }
 
 :host([first-of-type]) {
