--- a/src/components/Progress/progress.css
+++ b/src/components/Progress/progress.css
@@ -1,29 +1,18 @@
+:host {
+  --sgds-progress-height: 1rem;
+  display: block;
+}
+
 *,
 :after,
 :before {
   box-sizing: border-box;
 }
-.progress {
-  background-color: #e4e7ec;
-  border-radius: 0.3125rem;
-  font-size: 0.75rem;
-  height: 1rem;
-}
+
 .progress {
   display: flex;
   overflow: hidden;
-}
-.mb-3 {
-  margin-bottom: 1rem !important;
-}
-/** scss */
-
-:host {
-  --progress-height: 1rem;
-  --progress-font-size: 0.75rem;
-  display: block;
-}
-
-.progress {
-  height: var(--progress-height);
+  background-color: #e4e7ec;
+  border-radius: 0.3125rem;
+  height: var(--sgds-progress-height);
 }
