--- a/src/components/Progress/progress.css
+++ b/src/components/Progress/progress.css
@@ -1,4 +1,6 @@
 :host {
+  --sgds-progress-bg: var(--sgds-gray-200);
+  --sgds-progress-border-radius: 0.3125rem;
   --sgds-progress-height: 1rem;
   display: block;
 }
@@ -12,7 +14,7 @@
 .progress {
   display: flex;
   overflow: hidden;
-  background-color: #e4e7ec;
-  border-radius: 0.3125rem;
+  background-color: var(--sgds-progress-bg);
+  border-radius: var(--sgds-progress-border-radius);
   height: var(--sgds-progress-height);
 }
