--- a/src/components/Toast/toast-container.css
+++ b/src/components/Toast/toast-container.css
@@ -1,63 +1,66 @@
-.toast-container {
-  --sgds-toast-zindex: 1090;
-  max-width: 100%;
-  pointer-events: none;
-  position: absolute;
-  width: max-content;
-  z-index: var(--sgds-toast-zindex);
-}
-.toast-container > :not(:last-child) {
-  margin-bottom: var(--sgds-toast-spacing);
-}
-.top-0 {
-  top: 0 !important;
-}
-.top-50 {
-  top: 50% !important;
-}
-.top-100 {
-  top: 100% !important;
-}
-.bottom-0 {
-  bottom: 0 !important;
-}
-.bottom-50 {
-  bottom: 50% !important;
-}
-.bottom-100 {
-  bottom: 100% !important;
-}
-.start-0 {
-  left: 0 !important;
-}
-.start-50 {
-  left: 50% !important;
-}
-.start-100 {
-  left: 100% !important;
-}
-.end-0 {
-  right: 0 !important;
-}
-.end-50 {
-  right: 50% !important;
-}
-.end-100 {
-  right: 100% !important;
-}
-.translate-middle {
-  transform: translate(-50%, -50%) !important;
-}
-.translate-middle-x {
-  transform: translateX(-50%) !important;
-}
-.translate-middle-y {
-  transform: translateY(-50%) !important;
-}
-/**scss */
 :host {
   --toast-container-slot-elements-gap: 0.5rem;
+  --toast-container-z-index: 1090;
 }
+
+.toast-container {
+  max-width: 100%;
+  pointer-events: none;
+  position: fixed;
+  width: max-content;
+  z-index: var(--toast-container-z-index);
+}
+
+.top-start {
+  top: 0;
+  left: 0;
+}
+
+.top-center {
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.top-end {
+  top: 0;
+  right: 0;
+}
+
+.middle-start {
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+}
+
+.middle-center {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.middle-end {
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+}
+
+.bottom-start {
+  bottom: 0;
+  left: 0;
+}
+
+.bottom-center {
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.bottom-end {
+  bottom: 0;
+  right: 0;
+}
+
 slot {
   display: flex;
   flex-direction: column;
