--- a/src/components/Toast/toast-container.css
+++ b/src/components/Toast/toast-container.css
@@ -6,7 +6,7 @@
 .toast-container {
   max-width: 100%;
   pointer-events: none;
-  position: fixed;
+  position: absolute;
   width: max-content;
   z-index: var(--toast-container-z-index);
 }
