--- a/src/components/Breadcrumb/breadcrumb.css
+++ b/src/components/Breadcrumb/breadcrumb.css
@@ -2,19 +2,12 @@
   /* NEW in V2.0 */
   --sgds-breadcrumb-padding-x: var(--sgds-spacer-0);
   --sgds-breadcrumb-padding-y: var(--sgds-spacer-0);
-  --sgds-breadcrumb-margin-bottom: var(--sgds-spacer-3);
-  --sgds-breadcrumb-bg: transparent;
-  --sgds-breadcrumb-border-radius: 0;
-  --sgds-breadcrumb-font-size: var(--sgds-body-font-size);
-  --sgds-breadcrumb-separator-color: var(--sgds-body-color);
 }
 
 .breadcrumb {
-  background-color: var(--sgds-breadcrumb-bg);
-  border-radius: var(--sgds-breadcrumb-border-radius);
   display: flex;
   flex-wrap: wrap;
   list-style: none;
-  margin-bottom: var(--sgds-breadcrumb-margin-bottom);
+  margin: 0;
   padding: var(--sgds-breadcrumb-padding-y) var(--sgds-breadcrumb-padding-x);
 }
