chore(close button): update button color

--- a/src/styles/close-button.css
+++ b/src/styles/close-button.css
@@ -1,5 +1,5 @@
 :host {
-  --sgds-close-btn-color: #909090;
+  --sgds-close-btn-color: var(--sgds-gray-400);
   --sgds-close-btn-background: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='currentColor'%3E%3Cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3E%3C/svg%3E");
   --sgds-close-btn-opacity: 1;
   --sgds-close-btn-hover-opacity: 0.75;
