--- a/src/styles/feedback.css
+++ b/src/styles/feedback.css
@@ -26,7 +26,7 @@
 .invalid-feedback {
   color: var(--sgds-form-invalid-color);
   display: none;
-  font-size: 1rem;
+  font-size: var(--sgds-form-feedback-font-size);
   width: 100%;
 }
 .is-invalid ~ .invalid-feedback,
