--- a/src/styles/form-label.css
+++ b/src/styles/form-label.css
@@ -7,4 +7,8 @@
     margin-bottom: 0;
     color: var(--sgds-form-label-color);
   }
-  
+
+.form-label.required:after{
+    content: "*";
+    color: var(--sgds-danger);
+}
