--- a/src/components/FileUpload/file-upload.css
+++ b/src/components/FileUpload/file-upload.css
@@ -12,7 +12,6 @@
 
 .fileupload-list-item {
   display: flex;
-  flex-direction: row;
   gap: var(--sgds-file-upload-icon-gap);
 }
 .fileupload-list-item span:not(:first-of-type) {
@@ -31,7 +30,7 @@
 .file-upload-label {
   display: flex;
   align-items: center;
-  gap: var(--sgds-spacer-2);
+  gap: var(--sgds-file-upload-icon-gap);
 }
 /** end scss */
 ul {
