--- a/src/components/Spinner/spinner.css
+++ b/src/components/Spinner/spinner.css
@@ -1,38 +1,63 @@
 @import "../../styles/text-variants.css";
-  *,:after,:before {
-    box-sizing: border-box;
-  }
+
+:host {
+  --sgds-spinner-color: var(--sgds-primary-filled);
+  --sgds-spinner-size: 2rem;
+  --sgds-spinner-border-width: 0.25em;
+}
+
+:host([color="secondary"]) {
+  --sgds-spinner-color: var(--sgds-secondary-filled);
+}
+:host([color="warning"]) {
+  --sgds-spinner-color: var(--sgds-warning-filled);
+}
+:host([color="danger"]) {
+  --sgds-spinner-color: var(--sgds-danger-filled);
+}
+:host([color="success"]) {
+  --sgds-spinner-color: var(--sgds-success-filled);
+}
+:host([color="info"]) {
+  --sgds-spinner-color: var(--sgds-info-filled);
+}
+:host([color="light"]) {
+  --sgds-spinner-color: var(--sgds-light-filled);
+}
+:host([color="dark"]) {
+  --sgds-spinner-color: var(--sgds-dark-filled);
+}
+
+.spinner-border {
+  animation: spinner-border 0.75s linear infinite;
+  border: var(--sgds-spinner-border-width) solid;
+  border-radius: 50%;
+  border-right: var(--sgds-spinner-border-width) solid transparent;
+  display: inline-block;
+  height: var(--sgds-spinner-size);
+  vertical-align: -0.125em;
+  width: var(--sgds-spinner-size);
+  color: var(--sgds-spinner-color);
+}
+@media (prefers-reduced-motion: reduce) {
   .spinner-border {
-    animation: spinner-border 0.75s linear infinite;
-    border: 0.25em solid;
-    border-radius: 50%;
-    border-right: 0.25em solid transparent;
-    display: inline-block;
-    height: 2rem;
-    vertical-align: -0.125em;
-    width: 2rem;
+    animation-duration: 1.5s;
   }
-  @media (prefers-reduced-motion: reduce) {
-    .spinner-border {
-      animation-duration: 1.5s;
-    }
+}
+/*! CSS Used keyframes */
+@keyframes spinner-border {
+  to {
+    transform: rotate(1turn);
   }
-  /*! CSS Used keyframes */
-  @keyframes spinner-border {
-    to {
-      transform: rotate(1turn);
-    }
-  }
-  /** scss */
+}
 
-  .sr-only {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-    border: 0;
-  }
-
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
