fix(toast): fix dismissible toast not dismissing

--- a/src/components/Toast/toast.css
+++ b/src/components/Toast/toast.css
@@ -57,6 +57,9 @@
   width: 100%;
   max-width: var(--sgds-toast-max-width);
 }
+.toast[hidden] {
+  display: none;
+}
 .toast-header {
   display: flex;
   align-items: center;
